k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orarend-ingress
spec:
  ingressClassName: nginx 
  rules:
  - http:
      paths:
      # 1. USER SERVICE (Port: 5001)
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: user-app-service
            port:
              number: 5001

      # 2. SUBJECT SERVICE (Port: 5002)
      - path: /api/subjects
        pathType: Prefix
        backend:
          service:
            name: subject-app-service
            port:
              number: 5002

      # 3. SCHEDULE SERVICE (Port: 5003)
      - path: /api/schedules
        pathType: Prefix
        backend:
          service:
            name: schedule-app-service
            port:
              number: 5003
